<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <Button
        android:id="@+id/how_to_use"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/how_to_use"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/local_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/local_record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/local_record"
        app:layout_constraintTop_toBottomOf="@id/how_to_use"
        app:layout_constraintBottom_toTopOf="@id/log_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/log_file"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/logCheck"
        app:layout_constraintTop_toBottomOf="@id/local_record"
        app:layout_constraintBottom_toTopOf="@id/training_reference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/training_reference"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/training_reference"
        app:layout_constraintTop_toBottomOf="@id/log_file"
        app:layout_constraintBottom_toTopOf="@id/problem_solving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/problem_solving"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/problem_solving"
        app:layout_constraintTop_toBottomOf="@id/training_reference"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
