<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/Top_layout_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Unregistered_user"
            android:background="#808080"
            android:textSize="30sp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/VersionUpdateInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="버전 및 업데이트 정보"
            android:background="#00000000"
            android:textSize="14sp"
            android:layout_weight="1"
            />




    </LinearLayout>



    <Button
        android:id="@+id/how_to_use"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tracking_button"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintBottom_toTopOf="@id/local_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/local_record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/record_button"
        app:layout_constraintTop_toBottomOf="@id/how_to_use"
        app:layout_constraintBottom_toTopOf="@id/training_reference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/training_reference"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/horse_check_button"
        app:layout_constraintTop_toBottomOf="@id/local_record"
        app:layout_constraintBottom_toTopOf="@id/problem_solving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/problem_solving"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/user_button"
        app:layout_constraintTop_toBottomOf="@id/training_reference"
        app:layout_constraintBottom_toTopOf="@id/help_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/help_button"
        app:layout_constraintTop_toBottomOf="@id/problem_solving"
        app:layout_constraintBottom_toTopOf="@id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/exit_button"
        app:layout_constraintTop_toBottomOf="@id/help_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>